moved a bit of code around because .widget wrap was preventing code from functioning

--- a/wpsc-components/theme-engine-v2/theming/assets/css/wpsc-responsive.css
+++ b/wpsc-components/theme-engine-v2/theming/assets/css/wpsc-responsive.css
@@ -321,10 +321,6 @@ Widgets
   margin: 0;
   padding: 0;
   font-size: 16px; }
-.widget .widget_wpsc_widget_on_sale .wpsc-widget-latest-product-list-item {
-  margin-bottom: 30px; }
-.widget .widget_wpsc_widget_on_sale .wpsc-widget-latest-product-list-item:last-of-type {
-  margin-bottom: 0; }
 .widget .wpsc-product-thumbnail img {
   margin-bottom: 20px; }
 .widget .wpsc-product-price {
@@ -332,11 +328,17 @@ Widgets
 .widget ins.wpsc-sale-price {
   background: initial; }
 .widget .wpsc-widget-product-title {
-  font-size: 1.25em; }
+  font-size: 1.25em;
+  margin: 0 0 5px 0; }
 .widget .wpsc-product-price {
   margin-left: 0; }
 .widget .wpsc-product-price li {
   display: inline-block; }
+
+.widget_wpsc_widget_on_sale .wpsc-widget-latest-product-list-item {
+  margin-bottom: 30px; }
+.widget_wpsc_widget_on_sale .wpsc-widget-latest-product-list-item:last-of-type {
+  margin-bottom: 0; }
 
 #secondary .wpsc-widget-latest-product-list {
   margin-left: 0; }
