--- a/wpsc-components/theme-engine-v2/theming/assets/scss/partials/_widgets.scss
+++ b/wpsc-components/theme-engine-v2/theming/assets/scss/partials/_widgets.scss
@@ -13,14 +13,6 @@ Widgets
 	    padding: 0;
 	    font-size: $base-font;
 	}
-	.widget_wpsc_widget_on_sale {
-		.wpsc-widget-latest-product-list-item {
-		    margin-bottom: 30px;
-		}
-		.wpsc-widget-latest-product-list-item:last-of-type {
-		    margin-bottom: 0;
-		}
-	}
 	.wpsc-product-thumbnail img {
 	    margin-bottom: 20px;
 	}
@@ -32,12 +24,21 @@ Widgets
 	}
 	.wpsc-widget-product-title {
 		font-size: $title-size-col-4;
+		margin: 0 0 5px 0;
 	}
 	.wpsc-product-price {
 	    margin-left: 0;
 	}
 	.wpsc-product-price li {
 	    display: inline-block;
+	}
+}
+.widget_wpsc_widget_on_sale {
+	.wpsc-widget-latest-product-list-item {
+	    margin-bottom: 30px;
+	}
+	.wpsc-widget-latest-product-list-item:last-of-type {
+	    margin-bottom: 0;
 	}
 }
 #secondary .wpsc-widget-latest-product-list {
